<resources>
    <string name="app_name">FictionFodder</string>
    <string name="tag_hint">Add tag</string>
    <string name="delete_note">Delete Note</string>
    <string name="save_note">Save Note</string>
    <string name="add_text_note">New Text Note</string>
    <string name="add_image_note">New Image Note</string>
    <string name="caption_label">Caption</string>
    <string name="caption_hint">Enter a caption for the photo</string>
    <string name="image_note_thumbnail_content_description">A thumbnail of the image for
        this note</string>
    <string name="save_item_toast">Note saved</string>
    <string name="delete_item_toast">Note deleted</string>
    <string name="empty_trash_list">The trash is empty</string>

    <!-- Navigation Drawer String -->
    <string name="all_notes_label">All Notes</string>
    <string name="text_notes_label">Text Notes</string>
    <string name="image_notes_label">Image Notes</string>
    <string name="trash_notes_label">Trash</string>
    <string name="tag_section_label">Tags</string>

    <string name="drawer_open">Open Navigation Menu</string>
    <string name="drawer_close">Close Navigation Menu</string>
    <string name="search_notes">Search Notes</string>


</resources>
