<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/navigation_all_notes"
            android:title="@string/all_notes_label"
            />
        <item
            android:id="@+id/navigation_text_notes"
            android:title="@string/text_notes_label"
            />
        <item
            android:id="@+id/navigation_image_notes"
            android:title="@string/image_notes_label"
            />
        <item
            android:id="@+id/navigation_trash_notes"
            android:title="@string/trash_notes_label"
            />
        <item android:title="@string/tag_section_label">
            <menu>

            </menu>
        </item>
    </group>

</menu>